# PCSC2017_Group4

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  StandardFilter.cpp  StandardFilter.h  main2.cpp  makeAnimation.sh  run_tests.sh
Project/: AudioFile.h  BandPassFrequencyFilter.cpp  BandPassFrequencyFilter.h  CMakeLists.txt  ConfigFileExecuter.cpp  ConfigFileExecuter.h  ConfigFileParser.cpp  ConfigFileParser.h  Doxyfile  FileNotFoundException.hpp  FileParserException.hpp  FilterSizeException.hpp  FourierFilterException.hpp  FourierTransformSIgnal.m  FrequencyFilter.cpp  FrequencyFilter.h  HighPassFrequencyFilter.cpp  HighPassFrequencyFilter.h  HistogramException.h  InverseFourierException.h  LaplaceFilter.h  LaplaceFilter_imp.h  LowPassFrequencyFilter.cpp  LowPassFrequencyFilter.h  MeanFilter.h  MeanFilter_imp.h  MedianFilter.cpp  MedianFilter.h  PrewittFilter.h  PrewittFilter_imp.h  README  Read.cpp  Read.h  Signal.cpp  Signal.h  StandardFilter.cpp  StandardFilter.h  StandardFilter_imp.h  TODO.txt  TestErrorFT.cpp  (+13 more)
Project/doc/html/: _audio_file_8cpp.html  _audio_file_8cpp__incl.map  _audio_file_8cpp__incl.md5  _audio_file_8h.html  _audio_file_8h__dep__incl.map  _audio_file_8h__dep__incl.md5  _audio_file_8h__incl.map  _audio_file_8h_source.html  _mean_filter_8h_source.html  _mean_filter__imp_8h_source.html  _signal_8h_source.html  _standard_filter_8h_source.html  _standard_filter__imp_8h_source.html  annotated.html  class_audio_file-members.html  class_audio_file.html  class_mean_filter-members.html  class_mean_filter.html  class_mean_filter__coll__graph.map  class_mean_filter__coll__graph.md5  class_mean_filter__inherit__graph.md5  class_signal-members.html  class_signal.html  class_standard_filter-members.html  class_standard_filter.html  class_standard_filter__inherit__graph.map  class_standard_filter__inherit__graph.md5  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  (+7 more)
Project/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  enums_0.js  files_0.js  functions_0.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
Project/doc/latex/: _audio_file_8cpp.tex  _audio_file_8cpp__incl.md5  _audio_file_8h.tex  _audio_file_8h__dep__incl.md5  annotated.tex  class_audio_file.tex  class_mean_filter.tex  class_mean_filter__coll__graph.md5  class_mean_filter__inherit__graph.md5  class_signal.tex  class_standard_filter.tex  class_standard_filter__inherit__graph.md5  files.tex  hierarchy.tex  refman.tex
Project/test-audio/: amp_2_wav_converter.txt  plot_laplace.gnu  plot_mean.gnu  plot_median.gnu  plot_prewitt.gnu  test_highPass_options.txt  test_laplace_highPass_options.txt  test_lowPass_options.txt  test_mean_lowPass_options.txt  test_median_options.txt  test_prewitt_bandPass_options.txt  wav_2_amp_converter.txt
Project/test-audio/AditionalScripts/: HighLow_Signal_Generator.m  Impulse_Signal_Generator.m
doc/html/: graph_legend.html  index.html  md__home_shernand__public__scien__conce__p_c_s_c2017__group4__r_e_a_d_m_e.html  pages.html
doc/html/search/: all_0.js
doc/latex/: md__home_shernand__public__scien__conce__p_c_s_c2017__group4__r_e_a_d_m_e.tex  refman.tex
sounds_test/: sndfile-to-text.cc
sounds_test/AudioFile/: CMakeLists.txt  test_main.cpp
sounds_test/AudioFile/python_graph/: Testing_Sound.ipynb
sounds_test/AudioFile/python_graph/.ipynb_checkpoints/: Testing_Sound-checkpoint.ipynb
sounds_test/AudioFile/tests/: CMakeLists.txt
